// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VariantGlyphsExamples Stories > should render FlySox14 story snapshot 1`] = `
<div>
  <div
    style="margin-top: 20px;"
  >
    <div
      style="padding: 10px;"
    >
      Loaded 0 variants
    </div>
    <div
      class="viewer-border"
    >
      <svg
        id="fly-Sox14-svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      />
    </div>
  </div>
</div>
`;

exports[`VariantGlyphsExamples Stories > should render MousePTEN story snapshot 1`] = `
<div>
  <div
    style="margin-top: 20px;"
  >
    <div
      style="padding: 10px;"
    >
      Loaded 0 variants
    </div>
    <div
      class="viewer-border"
    >
      <svg
        id="mouse-PTEN-svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      />
    </div>
  </div>
</div>
`;
